--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 <body>
     <nav class="menu">
         <div class="logo">
-            <img class="logo__image" src="images/logo.png" alt="">
+            <a href="#init"><img class="logo__image" src="images/logo.png" alt=""></a>
         </div>
         <ul class="menu__list">
-            <li class="menu__item menu__item--isActive"><a class="menu__link" href="">Home</a></li>
-            <li class="menu__item"><a class="menu__link" href="">O nas</a></li>
-            <li class="menu__item"><a class="menu__link" href="">Oferta i cennik</a></li>
-            <li class="menu__item"><a class="menu__link" href="">Galeria</a></li>
-            <li class="menu__item"><a class="menu__link" href="">Kontakt</a></li>
-            <li class="menu__button"><a class="menu__link" href="">Pełna oferta</a></li>
+            <li class="menu__item"><a class="menu__link" href="#init">Home</a></li>
+            <li class="menu__item"><a class="menu__link" href="#one">O nas</a></li>
+            <li class="menu__item"><a class="menu__link" href="#two">Oferta</a></li>
+            <!-- <li class="menu__item"><a class="menu__link" href="">Galeria</a></li> -->
+            <li class="menu__item"><a class="menu__link" href="#">Cennik</a></li>
+            <li class="menu__item"><a class="menu__link" href="#three">Kontakt</a></li>
         </ul>
         <div class="burger-menu">
             <div class="burger-click-region">
@@ -39,12 +39,12 @@
     </nav>
     <nav class="horizontalMenu">
         <ul class="horizontalMenu__list">
-            <li class="horizontalMenu__item"><i class="fas fa-phone-alt"></i></li>
-            <li class="horizontalMenu__item"><a href=""><i class="fab fa-facebook"></i></a></li>
-            <li class="horizontalMenu__item"><a href=""><i class="fab fa-instagram"></i></a></li>
+            <li class="horizontalMenu__item"><a href="#three"><i class="fas fa-phone-alt"></i></a></li>
+            <li class="horizontalMenu__item"><a href="https://www.facebook.com/ABedul-masaże-i-terapia-manualna-109672580796106"><i class="fab fa-facebook"></i></a></li>
+            <li class="horizontalMenu__item"><a href="https://www.instagram.com/abedul.massage/?fbclid=IwAR37E3rnYu68Wo7rEi8QiPM2yJCJ59Wp-9-ziZFMc_4POTHpZcS-XQDzjK0"><i class="fab fa-instagram"></i></a></li>
         </ul>
     </nav>
-    <section class="carousel">
+    <section id="init" class="carousel">
         <div class="owl-carousel">
             <div>
                 <img class="carousel__image" src="./images/massage2.jpg" alt="">
@@ -56,14 +56,14 @@
                 <img class="carousel__image" src="./images/mainImage1.jpg" alt="">
             </div>
         </div>
-        <div class="carousel__textContent">
+        <div class="carousel__textContent animatable fadeInDown">
             <p>Twoje ciało zasługuje na relaks</p>
             <h1>ABedul</h1>
             <p>Profesjonalny salon masażu</p>
-            <button>Czytaj więcej</button>
+            <a href="#one"><button>Czytaj więcej</button></a>
         </div>
     </section>
-    <section class="aboutUs">
+    <section id="one" class="aboutUs">
         <div class="wrapper">
             <div class="aboutUs__introduction">
                 <h1 class="aboutUs__header">Mobilne studio masażu abedul</h1>
@@ -71,31 +71,32 @@
             </div>
             <div class="squares__list">
                 <div class="squares__item">
-                    <div class="squares__item--image squares__item--image1"></div>
+                    <div class="squares__item--image squares__item--image1 animatable fadeIn"></div>
                 </div>
-                <div class="squares__item squares__item--text">
+                <div class="squares__item squares__item--text animatable fadeIn">
                     <h2 class="squares__header">Maderoterapia</h2>
                     <p class="squares__paragraph"> Nasz salon specjalizuję się w Maderoterapii - kolumbijskim masażu antycellulitowym</p>
-                    <button class="button squares__btn">Czytaj więcej</button>
+                    <a href="#onehalf"><button class="button squares__btn">Czytaj więcej</button></a>
                 </div>
                 <div class="squares__item">
-                    <div class="squares__item--image squares__item--image2"></div>
+                    <div class="squares__item--image squares__item--image2 animatable fadeIn"></div>
                 </div>
-                <div class="squares__item squares__item--text">
+                <div class="squares__item squares__item--text animatable fadeIn">
                     <h2 class="squares__header squares__item--text">Kontakt</h2>
                     <p class="squares__paragraph">Zapraszamy do kontaktu telefonicznego w celu złożenia rezerwacji.</p>
-                    <button class="button squares__btn">Zadzwoń teraz <i class="fas fa-phone-alt"></i></button>
+                    <a href="#three"><button class="button squares__btn">Zadzwoń teraz <i class="fas fa-phone-alt"></i></button></a>
                 </div>
                 <div class="squares__item">
-                    <div class="squares__item--image squares__item--image3"></div>
+                    <div class="squares__item--image squares__item--image3 animatable fadeIn"></div>
                 </div>
-                <div class="squares__item squares__item--text">
+                <div class="squares__item squares__item--text animatable fadeIn">
                     <h2 class="squares__header">Masaż idealny</h2>
                     <p class="squares__paragraph">W ofercie naszego salonu dostępny jest między innymi masaż klasyczny, masaż rolkami oraz terapia manualna. Zapraszamy do zapoznania się z całą ofertą</p>
-                    <button class="button squares__btn">Przejdź do pełnej oferty</button>
+                    <a href="#two"><button class="button squares__btn">Przejdź do pełnej oferty</button></a>
                 </div>
             </div>
-            <div class="squares__list squares__list--maderotherapy">
+            <div id="onehalf" class="scrollpoint"></div>
+            <div class="squares__list squares__list--maderotherapy animatable2 fadeIn">
                 <div class="squares__item squares__item--maderotherapy squares__item--text">
                     <h2 class="squares__header">Maderoterapia</h2>
                     <p class="squares__paragraph"> Maderoterapia to holistyczna technika pracy z ciałem, która teraz, gdy technologia i produkty chemiczne atakują wszystkie obszary naszego życia, pozwala na bazie naturalnych zabiegów nawiązać nam kontakt z naturą, dbać o nasze ciało i nasze zdrowie.
@@ -112,35 +113,36 @@
                         </ul>
                     </p>
                 </div>
-                <div class="squares__item squares__item--maderotherapy">
-                    <img class="maderoteraphy__image" src="images/maderoterapia.jpg" alt="">
+                <div class="squares__item squares__item--maderotherapy fbgt">
+                    <img class="maderoteraphy__image animatable bounceInRight" src="images/maderoterapia.jpg" alt="">
                 </div>
+                <div id="two" class="scrollpoint"></div>
             </div>
         </div>
     </section>
     <section class="massages">
         <div class="massagesContainer">
-            <div class="massages__image"></div>
+            <div class="massages__image animatable2 bounceInLeft"></div>
             <div class="squares__list squares__list--Massage">
-                <div class="squares__item squares__item--sectionMassage squares__item--text">
+                <div class="squares__item squares__item--sectionMassage squares__item--text  animatable fadeIn">
                     <i class="massages__icon fas fa-dumbbell"></i>
-                    <h2 class="squares__header">Masaż rolkami</h2>
-                    <p>Zapraszamy do kontaktu telefonicznego w celu złożenia rezerwacji.</p>
+                    <h2 class="squares__header">Masaż z terapią manualną</h2>
+                    <p>Masaż kręgosłupa/całego ciała połączony z terapią manualną. Diagnostyka, wywiad, terapia na stawach i kręgach</p>
                 </div>
-                <div class="squares__item squares__item--sectionMassage squares__item--text">
+                <div class="squares__item squares__item--sectionMassage squares__item--text  animatable fadeIn">
                     <i class="massages__icon fas fa-dumbbell"></i>
-                    <h2 class="squares__header">Masaż klasyczny</h2>
-                    <p>Zapraszamy do kontaktu telefonicznego w celu złożenia rezerwacji.</p>
+                    <h2 class="squares__header">Masaż Maderoterapia - całe ciało</h2>
+                    <p>Zabieg obejmuje obszar dolnych i górnych części ciała" brzuch, boki, nogi, pupa, ręce</p>
                 </div>
-                <div class="squares__item squares__item--sectionMassage squares__item--text">
+                <div class="squares__item squares__item--sectionMassage squares__item--text  animatable fadeIn">
                     <i class="massages__icon fas fa-dumbbell"></i>
-                    <h2 class="squares__header">Terapia manualna</h2>
-                    <p>Zapraszamy do kontaktu telefonicznego w celu złożenia rezerwacji.</p>
+                    <h2 class="squares__header">Masaż Maderoterapia - górne partie ciała</h2>
+                    <p>Zabieg obejmuje górne partie ciała tj. brzuch, boki, część pleców w stronę łopatek, ręce</p>
                 </div>
-                <div class="squares__item squares__item--sectionMassage squares__item--text">
+                <div class="squares__item squares__item--sectionMassage squares__item--text  animatable fadeIn">
                     <i class="massages__icon fas fa-dumbbell"></i>
-                    <h2 class="squares__header">Terapia bańką</h2>
-                    <p>Zapraszamy do kontaktu telefonicznego w celu złożenia rezerwacji.</p>
+                    <h2 class="squares__header">Masaż Maderoterapia - dole partie ciała</h2>
+                    <p>Zabieg obejmuje partie dolne tj, Nogi część przednia, tylna, wewnętrzna plus pupa</p>
                 </div>
             </div>
         </div>
@@ -159,13 +161,15 @@
         </div>
     </div>
     </section>
-    <section class="checkFullOffer">
-        <div class="paragraphUnderline">
-            <p class="checkFullOffer__paragraph">Zadbaj o swoje ciało już dziś</p>
+    <section class="checkFullOfferContainer">
+        <div class="checkFullOffer animatable bounceInRight">
+            <div class="paragraphUnderline">
+                <p class="checkFullOffer__paragraph">Zadbaj o swoje ciało już dziś</p>
+            </div>
+            <button class="button chceckFullOffer__btn">Przejdź do pełnej oferty</button>
         </div>
-        <button class="button chceckFullOffer__btn">Przejdź do pełnej oferty</button>
     </section>
-    <section class="contact">
+    <section id="three" class="contact">
         <div class="wrapper">
             <div class="contact__container">
                 <div class="contact__map">
@@ -176,8 +180,8 @@
                     <p><i class="fas fa-phone-alt"></i> +48 666-666-666</p>
                     <p><i class="far fa-compass"></i> Częstochowa, 42-200</p>
                     <p><i class="fas fa-at"></i> abedul@gmail.com</p>
-                    <p><i class="fab fa-facebook"></i><a href=""> ABedul - Mobilne centrum masażu</a></p>
-                    <p><i class="fab fa-instagram"></i><a href=""> ABedul</a></p>
+                    <p><i class="fab fa-facebook"></i><a href="https://www.facebook.com/ABedul-masaże-i-terapia-manualna-109672580796106"> ABedul - Mobilne centrum masażu</a></p>
+                    <p><i class="fab fa-instagram"></i><a href="https://www.instagram.com/abedul.massage/?fbclid=IwAR37E3rnYu68Wo7rEi8QiPM2yJCJ59Wp-9-ziZFMc_4POTHpZcS-XQDzjK0"> ABedul</a></p>
                 </div>
             </div>
         </div>
@@ -187,7 +191,10 @@
             <div class="footer__container">
                 <div class="singleDiv">
                     <img class="footer__image" src="images/logoWhite.png" alt="">
-                    <p><a href=""><i class="fab fa-facebook"></i></a><a href=""><i class="fab fa-instagram"></i></a></p>
+                    <p>
+                        <a href="https://www.facebook.com/ABedul-masaże-i-terapia-manualna-109672580796106"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/abedul.massage/?fbclid=IwAR37E3rnYu68Wo7rEi8QiPM2yJCJ59Wp-9-ziZFMc_4POTHpZcS-XQDzjK0"><i class="fab fa-instagram"></i></a>
+                    </p>
 
                 </div>
                 <div class="singleDiv footer__contact">
@@ -197,11 +204,11 @@
                 </div>
                 <div class="singleDiv footer__list">
                     <ul class="menu__list menu__list--footer">
-                        <li class="menu__item"><a class="menu__link" href="">Home</a></li>
-                        <li class="menu__item"><a class="menu__link" href="">O nas</a></li>
-                        <li class="menu__item"><a class="menu__link" href="">Oferta i cennik</a></li>
-                        <li class="menu__item"><a class="menu__link" href="">Galeria</a></li>
-                        <li class="menu__item"><a class="menu__link" href="">Kontakt</a></li>
+                        <li class="menu__item"><a class="menu__link" href="#init">Home</a></li>
+                        <li class="menu__item"><a class="menu__link" href="#one">O nas</a></li>
+                        <li class="menu__item"><a class="menu__link" href="#two">Oferta i cennik</a></li>
+                        <!-- <li class="menu__item"><a class="menu__link" href="">Galeria</a></li> -->
+                        <li class="menu__item"><a class="menu__link" href="#three">Kontakt</a></li>
                         <li class="menu__item"><a class="menu__link" href="">Pełna oferta</a></li>
                     </ul>
                 </div>
@@ -212,5 +219,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous"></script>
     <script src="carousel.js"></script>
     <script src="burger.js"></script>
+    <script src="fadeinanimations.js"></script>
+    <script src="scroll.js"></script>
 </body>
 </html>
