--- a/index.html
+++ b/index.html
@@ -19,15 +19,14 @@
 <body>
     <nav class="menu">
         <div class="logo">
-            <a href="#init"><img class="logo__image" src="images/logo.png" alt=""></a>
+            <a href="#init"><img class="logo__image" src="images/logo.png" alt="ABedul salon masażu masaż maderoterapia"></a>
         </div>
         <ul class="menu__list">
             <li class="menu__item"><a class="menu__link" href="#init">Home</a></li>
             <li class="menu__item"><a class="menu__link" href="#one">O nas</a></li>
             <li class="menu__item"><a class="menu__link" href="#two">Oferta</a></li>
-            <!-- <li class="menu__item"><a class="menu__link" href="">Galeria</a></li> -->
-            <li class="menu__item"><a class="menu__link" href="#">Cennik</a></li>
             <li class="menu__item"><a class="menu__link" href="#three">Kontakt</a></li>
+            <li class="menu__button"><a class="menu__link" href="offer.html">Pełna oferta</a></li>
         </ul>
         <div class="burger-menu">
             <div class="burger-click-region">
@@ -47,13 +46,13 @@
     <section id="init" class="carousel">
         <div class="owl-carousel">
             <div>
-                <img class="carousel__image" src="./images/massage2.jpg" alt="">
+                <img class="carousel__image" src="./images/ABedul_masaz2.jpg" alt="ABedul salon masażu masaż maderoterapia">
             </div>
             <div>
-                <img class="carousel__image" src="./images/mainImage1.jpg" alt="">
+                <img class="carousel__image" src="./images/ABedul_masaz1.jpg" alt="ABedul salon masażu masaż maderoterapia">
             </div>
             <div>
-                <img class="carousel__image" src="./images/mainImage1.jpg" alt="">
+                <img class="carousel__image" src="./images/ABedul_masaz3.jpg" alt="ABedul salon masażu masaż maderoterapia">
             </div>
         </div>
         <div class="carousel__textContent animatable fadeInDown">
@@ -67,7 +66,7 @@
         <div class="wrapper">
             <div class="aboutUs__introduction">
                 <h1 class="aboutUs__header">Mobilne studio masażu abedul</h1>
-                <img class="line" src="SVG/LINIA.svg" alt="">
+                <img class="line" src="images/LINIA.svg" alt="">
             </div>
             <div class="squares__list">
                 <div class="squares__item">
@@ -114,7 +113,7 @@
                     </p>
                 </div>
                 <div class="squares__item squares__item--maderotherapy fbgt">
-                    <img class="maderoteraphy__image animatable bounceInRight" src="images/maderoterapia.jpg" alt="">
+                    <img class="maderoteraphy__image animatable bounceInRight" src="images/Abedul_Maderoterapia.jpg" alt="ABedul salon masażu masaż maderoterapia">
                 </div>
                 <div id="two" class="scrollpoint"></div>
             </div>
@@ -124,22 +123,22 @@
         <div class="massagesContainer">
             <div class="massages__image animatable2 bounceInLeft"></div>
             <div class="squares__list squares__list--Massage">
-                <div class="squares__item squares__item--sectionMassage squares__item--text  animatable fadeIn">
+                <div class="squares__item squares__item--sectionMassage squares__item--text animatable fadeIn">
                     <i class="massages__icon fas fa-dumbbell"></i>
                     <h2 class="squares__header">Masaż z terapią manualną</h2>
                     <p>Masaż kręgosłupa/całego ciała połączony z terapią manualną. Diagnostyka, wywiad, terapia na stawach i kręgach</p>
                 </div>
-                <div class="squares__item squares__item--sectionMassage squares__item--text  animatable fadeIn">
+                <div class="squares__item squares__item--sectionMassage squares__item--text animatable fadeIn">
                     <i class="massages__icon fas fa-dumbbell"></i>
                     <h2 class="squares__header">Masaż Maderoterapia - całe ciało</h2>
                     <p>Zabieg obejmuje obszar dolnych i górnych części ciała" brzuch, boki, nogi, pupa, ręce</p>
                 </div>
-                <div class="squares__item squares__item--sectionMassage squares__item--text  animatable fadeIn">
+                <div class="squares__item squares__item--sectionMassage squares__item--text animatable fadeIn">
                     <i class="massages__icon fas fa-dumbbell"></i>
                     <h2 class="squares__header">Masaż Maderoterapia - górne partie ciała</h2>
                     <p>Zabieg obejmuje górne partie ciała tj. brzuch, boki, część pleców w stronę łopatek, ręce</p>
                 </div>
-                <div class="squares__item squares__item--sectionMassage squares__item--text  animatable fadeIn">
+                <div class="squares__item squares__item--sectionMassage squares__item--text animatable fadeIn">
                     <i class="massages__icon fas fa-dumbbell"></i>
                     <h2 class="squares__header">Masaż Maderoterapia - dole partie ciała</h2>
                     <p>Zabieg obejmuje partie dolne tj, Nogi część przednia, tylna, wewnętrzna plus pupa</p>
@@ -154,7 +153,7 @@
                 <div class="squares__item squares__item--sectionMobility">
                     <h2 class="squares__header">Masaż zawsze pod ręką!</h2>
                     <p>Dostosowując się do wymagań klientów dajemy Wam możliwość zamówienia usługi do domu. To unikatowa szansa by stworzyć własny salon masażu w twoim domu, na tarasie lub w ogrodzie. Wszystkie potrzebne akcesoria przywozimy my (stól mobilny, kominek z aromatycznymi olejami, kosmetyki). Już nie musisz wychodzić z domu, czekać w kolejce. Zadzwoń i umów wizytę w twoim domowym zaciszu.</p>
-                    <button class="button squares__btn">Zadzwoń teraz <i class="fas fa-phone-alt"></i></button>
+                    <a href="#three"><button class="button squares__btn">Zadzwoń teraz <i class="fas fa-phone-alt"></i></button></a>
                 </div>
             <div class="mobility__image"></div>
             </div>
@@ -166,7 +165,7 @@
             <div class="paragraphUnderline">
                 <p class="checkFullOffer__paragraph">Zadbaj o swoje ciało już dziś</p>
             </div>
-            <button class="button chceckFullOffer__btn">Przejdź do pełnej oferty</button>
+            <a href="offer.html"><button class="button chceckFullOffer__btn">Przejdź do pełnej oferty</button></a> 
         </div>
     </section>
     <section id="three" class="contact">
@@ -206,10 +205,9 @@
                     <ul class="menu__list menu__list--footer">
                         <li class="menu__item"><a class="menu__link" href="#init">Home</a></li>
                         <li class="menu__item"><a class="menu__link" href="#one">O nas</a></li>
-                        <li class="menu__item"><a class="menu__link" href="#two">Oferta i cennik</a></li>
-                        <!-- <li class="menu__item"><a class="menu__link" href="">Galeria</a></li> -->
+                        <li class="menu__item"><a class="menu__link" href="#two">Oferta</a></li>
                         <li class="menu__item"><a class="menu__link" href="#three">Kontakt</a></li>
-                        <li class="menu__item"><a class="menu__link" href="">Pełna oferta</a></li>
+                        <li class="menu__item"><a class="menu__link" href="offer.html">Pełna oferta</a></li>
                     </ul>
                 </div>
             </div>
@@ -217,9 +215,9 @@
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous"></script>
-    <script src="carousel.js"></script>
-    <script src="burger.js"></script>
-    <script src="fadeinanimations.js"></script>
-    <script src="scroll.js"></script>
+    <script src="js/carousel.js"></script>
+    <script src="js/burger.js"></script>
+    <script src="js/fadeinanimations.js"></script>
+    <script src="js/scroll.js"></script>
 </body>
 </html>
