--- a/offer.html
+++ b/offer.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Hind+Guntur:wght@400;700&family=Kanit:wght@400;700&family=Martel:wght@400;700&family=Work+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
     <!-- owlCarousel -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.0.0-beta.3/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
@@ -19,14 +20,13 @@
 <body>
     <nav class="menu">
         <div class="logo">
-            <a href="#"><img class="logo__image" src="images/logo.png" alt=""></a>
+            <a href="index.html#init"><img class="logo__image" src="images/logo.png" alt="ABedul salon masażu masaż maderoterapia"></a>
         </div>
         <ul class="menu__list">
-            <li class="menu__item"><a class="menu__link" href="index.html">Home</a></li>
-            <li class="menu__item"><a class="menu__link" href="index.html">O nas</a></li>
-            <li class="menu__item"><a class="menu__link" href="index.html">Oferta i cennik</a></li>
-            <!-- <li class="menu__item"><a class="menu__link" href="">Galeria</a></li> -->
-            <li class="menu__item"><a class="menu__link" href="index.html">Kontakt</a></li>
+            <li class="menu__item"><a class="menu__link" href="index.html#init">Home</a></li>
+            <li class="menu__item"><a class="menu__link" href="index.html#one">O nas</a></li>
+            <li class="menu__item"><a class="menu__link" href="index.html#two">Oferta</a></li>
+            <li class="menu__item"><a class="menu__link" href="#three">Kontakt</a></li>
             <li class="menu__button"><a class="menu__link" href="offer.html">Pełna oferta</a></li>
         </ul>
         <div class="burger-menu">
@@ -45,66 +45,76 @@
         </ul>
     </nav>
     <section class="offer">
+        <div class="offer__hero animatable fadeIn">
+            <h1 class="hero__header">CENNIK</h1>
+        </div>
         <div class="wrapper">
-            <div class="aboutUs__introduction">
-                <h1 class="aboutUs__header">Cennik</h1>
-                <img class="line" src="SVG/LINIA.svg" alt="">
-            </div>
-            <div class="offer__item">
-                <div class="offer__description">
-                    <h1 class="offer__header">Masaż z terapią manualną (Chiropraktyka)</h1>
-                    <p class="offer__about">Masaż kręgosłupa/całego ciała połączony z terapią manualną. Diagnostyka, wywiad, terapia na stawach i kręgach(mobilizacje, manipulacje)</p>
-                    <p class="offer__time">Czas trwania: 60 minut</p>
-                    <p class="offer__price">Cena: 90 zł</p>
+            <div class="offerContainer">
+                <div class="offer__items">
+                    <div class="offer__item animatable fadeIn">
+                        <h1 class="offer__header">MASAŻ Z TERAPIĄ MANUALNĄ (CHIROPRAKTYKA)</h1>
+                        <p class="offer__details">60minut / 90zł</p>
+                        <p class="offer__description">Masaż kręgosłupa/całego ciała połączony z terapią manualną. Diagnostyka, wywiad, terapia na stawach i kręgach(mobilizacje, manipulacje)</p>
+                    </div>
+                    <div class="offer__item animatable fadeIn">
+                        <h1 class="offer__header">MASAŻ Z TERAPIĄ MANUALNĄ (CHIROPRAKTYKA)</h1>
+                        <p class="offer__details">60minut / 90zł</p>
+                        <p class="offer__description">Masaż kręgosłupa/całego ciała połączony z terapią manualną. Diagnostyka, wywiad, terapia na stawach i kręgach(mobilizacje, manipulacje)</p>
+                    </div>
+                    <div class="offer__item animatable fadeIn">
+                        <h1 class="offer__header">MASAŻ Z TERAPIĄ MANUALNĄ (CHIROPRAKTYKA)</h1>
+                        <p class="offer__details">60minut / 90zł</p>
+                        <p class="offer__description">Masaż kręgosłupa/całego ciała połączony z terapią manualną. Diagnostyka, wywiad, terapia na stawach i kręgach(mobilizacje, manipulacje)</p>
+                    </div>
+                    <div class="offer__item animatable fadeIn">
+                        <h1 class="offer__header">MASAŻ Z TERAPIĄ MANUALNĄ (CHIROPRAKTYKA)</h1>
+                        <p class="offer__details">60minut / 90zł</p>
+                        <p class="offer__description">Masaż kręgosłupa/całego ciała połączony z terapią manualną. Diagnostyka, wywiad, terapia na stawach i kręgach(mobilizacje, manipulacje)</p>
+                    </div>
+                    <div class="offer__item animatable fadeIn">
+                        <h1 class="offer__header">MASAŻ Z TERAPIĄ MANUALNĄ (CHIROPRAKTYKA)</h1>
+                        <p class="offer__details">60minut / 90zł</p>
+                        <p class="offer__description">Masaż kręgosłupa/całego ciała połączony z terapią manualną. Diagnostyka, wywiad, terapia na stawach i kręgach(mobilizacje, manipulacje)</p>
+                    </div>
+                    <div class="offer__item animatable fadeIn">
+                        <h1 class="offer__header">MASAŻ Z TERAPIĄ MANUALNĄ (CHIROPRAKTYKA)</h1>
+                        <p class="offer__details">60minut / 90zł</p>
+                        <p class="offer__description">Masaż kręgosłupa/całego ciała połączony z terapią manualną. Diagnostyka, wywiad, terapia na stawach i kręgach(mobilizacje, manipulacje)</p>
+                    </div>
+                    <div class="offer__item animatable fadeIn">
+                        <h1 class="offer__header">MASAŻ Z TERAPIĄ MANUALNĄ (CHIROPRAKTYKA)</h1>
+                        <p class="offer__details">60minut / 90zł</p>
+                        <p class="offer__description">Masaż kręgosłupa/całego ciała połączony z terapią manualną. Diagnostyka, wywiad, terapia na stawach i kręgach(mobilizacje, manipulacje)</p>
+                    </div>
+                    <div class="offer__item animatable fadeIn">
+                        <h1 class="offer__header">MASAŻ Z TERAPIĄ MANUALNĄ (CHIROPRAKTYKA)</h1>
+                        <p class="offer__details">60minut / 90zł</p>
+                        <p class="offer__description">Masaż kręgosłupa/całego ciała połączony z terapią manualną. Diagnostyka, wywiad, terapia na stawach i kręgach(mobilizacje, manipulacje)</p>
+                    </div>
                 </div>
-                <div class="offer__image">
-                    <img class="offer__desciption--image" src="images/1.jpg" alt="">
-                </div>
-            </div>
-            <div class="offer__item">
-                <div class="offer__description">
-                    <h1 class="offer__header">Masaż z terapią manualną (Chiropraktyka)</h1>
-                    <p class="offer__about">Masaż kręgosłupa/całego ciała połączony z terapią manualną. Diagnostyka, wywiad, terapia na stawach i kręgach(mobilizacje, manipulacje).</p>
-                    <p class="offer__time">Czas trwania: 60 minut</p>
-                    <p class="offer__price">Cena: 90 zł</p>
-                </div>
-                <div class="offer__image">
-                    <img class="offer__desciption--image" src="images/1.jpg" alt="">
-                </div>
-            </div>
-            <div class="offer__item">
-                <div class="offer__description">
-                    <h1 class="offer__header">Masaż z terapią manualną (Chiropraktyka)</h1>
-                    <p class="offer__about">Masaż kręgosłupa/całego ciała połączony z terapią manualną. Diagnostyka, wywiad, terapia na stawach i kręgach(mobilizacje, manipulacje).</p>
-                    <p class="offer__time">Czas trwania: 60 minut</p>
-                    <p class="offer__price">Cena: 90 zł</p>
-                </div>
-                <div class="offer__image">
-                    <img class="offer__desciption--image" src="images/1.jpg" alt="">
-                </div>
-            </div>
-            <div class="offer__item">
-                <div class="offer__description">
-                    <h1 class="offer__header">Masaż z terapią manualną (Chiropraktyka)</h1>
-                    <p class="offer__about">Masaż kręgosłupa/całego ciała połączony z terapią manualną. Diagnostyka, wywiad, terapia na stawach i kręgach(mobilizacje, manipulacje).</p>
-                    <p class="offer__time">Czas trwania: 60 minut</p>
-                    <p class="offer__price">Cena: 90 zł</p>
-                </div>
-                <div class="offer__image">
-                    <img class="offer__desciption--image" src="images/1.jpg" alt="">
-                </div>
-            </div>
-            <div class="offer__item">
-                <div class="offer__description">
-                    <h1 class="offer__header">Masaż z terapią manualną (Chiropraktyka)</h1>
-                    <p class="offer__about">Masaż kręgosłupa/całego ciała połączony z terapią manualną. Diagnostyka, wywiad, terapia na stawach i kręgach(mobilizacje, manipulacje).</p>
-                    <p class="offer__time">Czas trwania: 60 minut</p>
-                    <p class="offer__price">Cena: 90 zł</p>
-                </div>
-                <div class="offer__image">
-                    <img class="offer__desciption--image" src="images/1.jpg" alt="">
+                <div class="offer__images">
+                    <img class="animatable fadeIn" src="images/ABedul_Oferta3.jpg" alt="ABedul salon masażu masaż maderoterapia">
+                    <img class="animatable2 fadeIn" src="images/ABedul_Oferta2.jpg" alt="ABedul salon masażu masaż maderoterapia">
+                    <img class="animatable fadeIn" src="images/ABedul_Oferta4.jpg" alt="ABedul salon masażu masaż maderoterapia">
+                    <img class="animatable2 fadeIn" src="images/ABedul_Oferta1.jpg" alt="ABedul salon masażu masaż maderoterapia">
+                    <img class="animatable fadeIn" src="images/ABedul_Oferta5.jpg" alt="ABedul salon masażu masaż maderoterapia">
                 </div>
             </div>
+        </div>
+        <div id="three" class="contact__container contact__container--offer">
+            <div class="contact__map">
+                <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d29360.657271582222!2d19.113457462518802!3d50.80779535698976!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spl!2spl!4v1615834805737!5m2!1spl!2spl" width="500" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+            <div class="contact__details">
+                <img class="logo__image" src="images/logopng.png" alt="">
+                <p><i class="fas fa-phone-alt"></i> +48 666-666-666</p>
+                <p><i class="far fa-compass"></i> Częstochowa, 42-200</p>
+                <p><i class="fas fa-at"></i> abedul@gmail.com</p>
+                <p><i class="fab fa-facebook"></i><a href="https://www.facebook.com/ABedul-masaże-i-terapia-manualna-109672580796106"> ABedul - Mobilne centrum masażu</a></p>
+                <p><i class="fab fa-instagram"></i><a href="https://www.instagram.com/abedul.massage/?fbclid=IwAR37E3rnYu68Wo7rEi8QiPM2yJCJ59Wp-9-ziZFMc_4POTHpZcS-XQDzjK0"> ABedul</a></p>
+            </div>
+        </div>
+    </div>
     </section>
     <section class="footer">
         <div class="wrapper">
@@ -123,21 +133,22 @@
                 </div>
                 <div class="singleDiv footer__list">
                     <ul class="menu__list menu__list--footer">
-                        <li class="menu__item"><a class="menu__link" href="index.html">Home</a></li>
-                        <li class="menu__item"><a class="menu__link" href="index.html">O nas</a></li>
-                        <li class="menu__item"><a class="menu__link" href="index.html">Oferta i cennik</a></li>
-                        <!-- <li class="menu__item"><a class="menu__link" href="">Galeria</a></li> -->
-                        <li class="menu__item"><a class="menu__link" href="index.html">Kontakt</a></li>
+                        <li class="menu__item"><a class="menu__link" href="index.html#init">Home</a></li>
+                        <li class="menu__item"><a class="menu__link" href="index.html#one">O nas</a></li>
+                        <li class="menu__item"><a class="menu__link" href="index.html#two">Oferta</a></li>
+                        <li class="menu__item"><a class="menu__link" href="#three">Kontakt</a></li>
                         <li class="menu__item"><a class="menu__link" href="offer.html">Pełna oferta</a></li>
                     </ul>
                 </div>
             </div>
         </div>
     </section>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous"></script>
-    <script src="carousel.js"></script>
-    <script src="burger.js"></script>
-    <script src="scroll.js"></script>
+    <script src="js/carousel.js"></script>
+    <script src="js/burger.js"></script>
+    <script src="js/fadeinanimations.js"></script>
+    <script src="js/scroll.js"></script>
 </body>
 </html>
