--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     </p>
                 </div>
                 <div class="squares__item squares__item--maderotherapy fbgt">
-                    <img class="maderoteraphy__image animatable bounceInRight" src="images/Abedul_Maderoterapia.jpg" alt="ABedul salon masażu masaż maderoterapia">
+                    <img class="maderoteraphy__image animatable bounceInRight" src="images/ABedul_Maderoterapia.jpg" alt="ABedul salon masażu masaż mobilny maderoterapia">
                 </div>
                 <div id="two" class="scrollpoint"></div>
             </div>
