--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <li class="menu__item"><a class="menu__link" href="#one">O nas</a></li>
             <li class="menu__item"><a class="menu__link" href="#two">Oferta</a></li>
             <li class="menu__item"><a class="menu__link" href="#three">Kontakt</a></li>
+            <li class="menu__item"><a class="menu__link" href="blog.html">Blog</a></li>
             <li class="menu__button"><a class="menu__link" href="offer.html">Pełna oferta</a></li>
         </ul>
         <div class="burger-menu">
@@ -43,7 +44,7 @@
             <li class="horizontalMenu__item"><a href="https://www.instagram.com/abedul.massage/?fbclid=IwAR37E3rnYu68Wo7rEi8QiPM2yJCJ59Wp-9-ziZFMc_4POTHpZcS-XQDzjK0"><i class="fab fa-instagram"></i></a></li>
         </ul>
     </nav>
-    <section id="init" class="carousel">
+    <section id="init" class="carousel animatable fadeIn"">
         <div class="owl-carousel">
             <div>
                 <img class="carousel__image" src="./images/ABedul_masaz2.jpg" alt="ABedul salon masażu masaż maderoterapia">
