--- a/offer.html
+++ b/offer.html
@@ -26,7 +26,8 @@
             <li class="menu__item"><a class="menu__link" href="index.html#init">Home</a></li>
             <li class="menu__item"><a class="menu__link" href="index.html#one">O nas</a></li>
             <li class="menu__item"><a class="menu__link" href="index.html#two">Oferta</a></li>
-            <li class="menu__item"><a class="menu__link" href="#three">Kontakt</a></li>
+            <li class="menu__item"><a class="menu__link" href="index.html#three">Kontakt</a></li>
+            <li class="menu__item"><a class="menu__link" href="blog.html">Blog</a></li>
             <li class="menu__button"><a class="menu__link" href="offer.html">Pełna oferta</a></li>
         </ul>
         <div class="burger-menu">
@@ -143,7 +144,6 @@
             </div>
         </div>
     </section>
-    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous"></script>
     <script src="js/carousel.js"></script>
