--- a/offer.html
+++ b/offer.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- stle -->
+    <link rel="icon" type="image/png" href="../images/iconLogo.png"/>
     <link rel="stylesheet" href="css/mains.css">
     <title>ABedul - usługi masażu</title>
 </head>
